# investment-bot

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.prod.yml  entrypoint.sh  main.py  pyproject.toml
src/: main.py
src/analysis/: mean_reversion.py  momentum.py  signal_combiner.py
src/market_data/: historical.py  streaming.py
src/metrics/: performance.py
src/portfolio/: core.py  dynamic.py  trading_config.py
src/risk_management/: position_sizing.py  stop_loss.py
src/trading/: execution.py  fees.py  orders.py
