[project]
name = "investment-bot"
version = "0.1.0"
description = "Long-term Momentum and Mean Reversion Strategy with High-Frequency Rebalancing on alpaca.markets (US shares)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py",
    "pandas",
    "numpy",
    "asyncio",
    "aiohttp",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
